feat: implement caching for bus, driver, and route services; add CacheConfig